--- a/10252017/example_data_wrangling_ii/reading_webs2.Rmd
+++ b/10252017/example_data_wrangling_ii/reading_webs2.Rmd
@@ -46,6 +46,29 @@ table_marj = (drug_use_xml %>% html_nodes(css = "table"))[[1]] %>%
 
 ```
 
+```{r}
+nyc_water = GET("https://data.cityofnewyork.us/resource/waf7-5gvc.csv") %>% 
+  content("parsed")
+
+nyc_water = GET("https://data.cityofnewyork.us/resource/waf7-5gvc.json") %>% 
+  content("text") %>%
+  jsonlite::fromJSON() %>%
+  as_tibble()
+
+
+brfss = 
+  GET("https://chronicdata.cdc.gov/api/views/hn4x-zwk7/rows.csv?accessType=DOWNLOAD") %>% 
+  content("parsed")
+
+
+poke = GET("http://pokeapi.co/api/v2/pokemon/1") %>%
+  content()
+
+poke$name
+
+```
+
+
 learning assignment
 ```{r}
 url2= "https://www.bestplaces.net/cost_of_living/city/new_york/new_york"
